# giskard-oss

./: .secrets.baseline  AGENTS.md  CLAUDE.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  lessons.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.claude/skills/check/: SKILL.md
.cursor/rules/: guidelines.mdc
.cursor/skills/giskard-checks-new-check/: SKILL.md  reference.md
.cursor/skills/giskard-oss-pr-ready/: SKILL.md
.github/: labeler.yml
.github/workflows/: ci.yml  integration-tests.yml  release.yml
examples/chatbot_scan/: .env.example  chatbot_scan.py
libs/giskard-agents/: README.md  pyproject.toml
libs/giskard-agents/.cursor/rules/: generator-adapter.mdc
libs/giskard-agents/tests/: conftest.py  test_generator.py  test_generator_backends.py  test_generator_retry.py  test_litellm_generator.py  test_serialization.py  test_streaming.py  test_tool_hooks.py  test_tools.py  test_workflow.py  test_workflow_error_handling.py  test_workflow_output_parsing.py
libs/giskard-checks/: CODEMAP.md  README.md  conftest.py  pyproject.toml
libs/giskard-checks/.cursor/rules/: 02-project.mdc  03-development.mdc
libs/giskard-checks/tests/: conftest.py  test_import_without_pytest.py  test_public_import_surface.py
libs/giskard-checks/tests/builtin/: test_base.py  test_composition.py  test_conformity.py  test_contradiction.py  test_correctness.py  test_fn.py  test_groundedness.py  test_json_valid.py  test_judge.py  test_semantic_similarity.py  test_toxicity.py
libs/giskard-checks/tests/core/: test_gen_ai.py  test_input_generator.py  test_input_type_inference.py  test_print_report.py  test_result_recommendation.py  test_scenario.py  test_suite.py  test_trace_type_inference.py
libs/giskard-checks/tests/export/: test_junit.py
libs/giskard-checks/tests/functional/: conftest.py  test_genai.py  (+3 more)
libs/giskard-core/: pyproject.toml
libs/giskard-llm/: README.md  pyproject.toml
libs/giskard-llm/.cursor/rules/: 01-architecture.mdc  04-provider-docs.mdc
libs/giskard-llm/docs/: design.md
libs/giskard-llm/src/giskard/llm/: __init__.py  _types.py  errors.py  otel.py  retry.py  routing.py  types.py  types_new.py  utils.py
libs/giskard-llm/src/giskard/llm/providers/: _coerce.py  anthropic.py  azure_ai.py  azure_openai.py  base.py  google.py  openai.py
libs/giskard-llm/src/giskard/llm/translators/: google_response.py  openai_chat.py
libs/giskard-llm/src/giskard/llm/types/: __init__.py  _openai_chat.py  _openai_embedding.py  _openai_reponse.py  _validation.py  chat.py  embedding.py  response.py  response_result.py
libs/giskard-llm/src/giskard/llm/utils/: __init__.py  schema.py
libs/giskard-llm/tests/: conftest.py  test_errors.py  test_providers.py  test_retry.py  test_routing.py  test_types.py
libs/giskard-llm/tests/functional/: conftest.py  helpers.py  test_behavior_config.py  test_completion.py  test_embedding.py  test_multi_system.py  test_response.py
libs/giskard-llm/tests/translators/: test_google_response.py  test_google_response_return.py  test_openai_response_return.py
libs/giskard-scan/: README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
libs/giskard-scan/src/giskard/scan/: __init__.py  catalog.py  quality.py  registry.py  types.py  vulnerability.py
libs/giskard-scan/src/giskard/scan/generators/: __init__.py  adversarial.py  base.py  crescendo.py  gcg.py  goat.py  huggingface.py  knowledge_base.py  prompt_injection.py
libs/giskard-scan/src/giskard/scan/generators/data/: prompt_injection.jsonl
libs/giskard-scan/src/giskard/scan/generators/knowledge_base/: out_of_scope.py
libs/giskard-scan/src/giskard/scan/prompts/generate_suite/: quality_recommendation.j2
libs/giskard-scan/src/giskard/scan/prompts/judges/: crescendo_eval.j2
libs/giskard-scan/src/giskard/scan/prompts/scenarios/: crescendo_attack.j2  knowledge_base_question.j2
libs/giskard-scan/src/giskard/scan/utils/: __init__.py  knowledge_base.py  recommendation.py
libs/giskard-scan/tests/: conftest.py  test_generators_base.py  test_generators_concrete.py  test_knowledge_base.py  test_public_api.py  test_public_import_surface.py  test_quality.py  test_vulnerability.py
libs/giskard-scan/tests/generators/: test_adversarial.py  test_base.py  test_catalog.py  test_crescendo.py  test_gcg.py  test_goat.py  test_huggingface.py  test_knowledge_base.py  test_prompt_injection.py  test_registry.py
(+96 files in other folders)
