[project]
name = "giskard-llm"
version = "1.0.0a1"
description = "Lightweight LLM routing layer over native provider SDKs"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Giskard R&D", email = "rnd@giskard.ai" }]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.0,<3",
]

[project.optional-dependencies]
openai = ["openai>=1.30,<3"]
google = ["google-genai>=1.0,<2"]
anthropic = ["anthropic>=0.40,<1"]
azure = ["giskard-llm[openai]"]  # alias: azure/ and azure_ai/ use the openai SDK
all = ["giskard-llm[openai,google,anthropic]"]
# Provider SDK + OpenTelemetry GenAI instrumentation (semconv logs). Used by giskard-checks functional tests.
# Each *-otel extra depends on the matching base extra so SDK version bounds stay single-sourced.
openai-otel = [
    "giskard-llm[openai]",
    "httpx>=0.28.1",
    "opentelemetry-instrumentation-openai-v2>=2.3b0",
    "opentelemetry-sdk>=1.41,<2",
    # opentelemetry-instrumentation-openai-v2 calls wrap_function_wrapper(module=...); wrapt 2.x renamed that kw to target=
    "wrapt<2",
]
google-otel = [
    "giskard-llm[google]",
    "httpx>=0.28.1",
    "opentelemetry-instrumentation-google-genai>=0.7b0",
    "opentelemetry-sdk>=1.41,<2",
    "wrapt<2",
]
anthropic-otel = [
    "giskard-llm[anthropic]",
    "httpx>=0.28.1",
    "opentelemetry-instrumentation-anthropic>=0.59b0",
    "opentelemetry-sdk>=1.41,<2",
    "wrapt<2",
]
azure-otel = ["giskard-llm[openai-otel]"]  # alias: azure/ and azure_ai/ use the openai SDK
all-otel = ["giskard-llm[openai-otel,google-otel,anthropic-otel]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "openai: tests requiring the openai SDK",
    "bare: tests exercising the no-prefix routing default (openai SDK)",
    "google: tests requiring the google-genai SDK",
    "gemini: tests for the gemini/ routing alias (google-genai SDK)",
    "anthropic: tests requiring the anthropic SDK",
    "azure: tests requiring the openai SDK (Azure OpenAI)",
    "azure_ai: tests requiring the openai SDK (Azure AI Foundry)",
    "functional: functional tests making real API calls",
    "no_providers: tests that run without any provider SDK installed",
]

[tool.ruff.lint.isort.sections]
"my_packages" = ["giskard"]

[tool.hatch.build.targets.wheel]
packages = ["src/giskard"]

[tool.ruff.lint]
select = ["I", "F401"]
