[project]
name = "giskard-scan"
version = "1.0.0b1"
description = "Agent vulnerability scanner — red teaming, prompt injection, adversarial scenario generation"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Giskard R&D", email = "rnd@giskard.ai" }]
requires-python = ">=3.12"
dependencies = [
    "giskard-checks>=1.0.2b3,<2",
    "giskard-agents>=1.0.2b3,<2",
    "numpy>=2.4.1,<3",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/giskard"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "--doctest-modules"
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff.lint]
select = ["E", "W", "I", "F"]
ignore = ["E501"]

[tool.ruff.lint.isort.sections]
"my_packages" = ["giskard"]

[tool.pyright]
failOnWarnings = false
typeCheckingMode = "recommended"
reportImportCycles = "warning"
